--- a/P4_G4.md
+++ b/P4_G4.md
@@ -346,7 +346,8 @@ plt.show()
 
 '''Se sabe que un sistema es ergodico si la hipersuperficie de energía 
 constante del espacio de las fases es toda la hipersuperficie de energía  y esta energía es constante, como se observa
-en la gráfica la energía se mantiene constante por lo que el sistema es ergodico.'''
+en la gráfica la energía se mantiene constante por lo que el sistema es ergodico. Además si el promedio se mantiene t
+es estacionario, de manera que su varianza es nula, cosa que también se observa en la gráfica.'''
 
 
 # 4.3. - Densidad espectral de potencia
